flags for playframework#11209 (run "test")